# ibus-deepspeech

./: Makefile.am  autogen.sh  configure.ac
debian/: changelog  control
engine/: .main.py.swp  Makefile.am  deepspeech.xml.in.in  engine.py  ibus-engine-deepspeech.in  main.py
icons/: Makefile.am
m4/: Makefile.am
po/: Makevars  zh_CN.po
